# TensorWrapper

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
PulsarLibraryBase/: .gitrepo  README.md
TensorWrapper/: CMakeLists.txt  Config.hpp.in  Contraction.hpp  DisableUselessWarnings.hpp  Downcast.hpp  EigenWrapper.hpp  EnableUselessWarnings.hpp  IndexItr.cpp  IndexItr.hpp  Indices.hpp  Indices2.hpp  MathLibs.hpp.in  MemoryBlock.cpp  MemoryBlock.hpp  Operation.hpp  OperationImpls.hpp  Operations.hpp  RunTime.hpp  Shape.cpp  Shape.hpp  Space.cpp  Space.hpp  TWOperators.hpp  TensorImpls.hpp  TensorPtr.cpp  TensorPtr.hpp  TensorTypes.hpp  TensorWrapper.hpp  TensorWrapperBase.hpp  TensorWrapperConfig.cmake.in  TensorWrapperExtern.cpp  TensorWrapperExtern.hpp  TensorWrapperImpl.hpp  Traits.hpp  Upcaster.hpp  tensorwrapperbase.hpp.autosave
TensorWrapper/Operations/: Add.hpp  Contraction.hpp  Convert.hpp  IndexedTensor.hpp  OperationBase.hpp  Permute.hpp  Reduction.hpp  Scale.hpp  Subtraction.hpp  Trace.hpp
TensorWrapper/TMUtils/: TypeComparisons.hpp
TensorWrapper/TensorImpl/: CMakeLists.txt  CTFWrapper.hpp  ContractionHelper.hpp  Conversions.hpp  EigenMatrixWrapper.hpp  EigenTensorWrapper.hpp  GATensor.hpp  GATensorImpl.cpp  GATensorImpl.hpp  GATensorWrapper.hpp  TensorTypes.hpp  TensorWrapperImpl.hpp  TiledArrayWrapper.hpp  dummy.F
TensorWrapper/TensorImpl/GA_CXX/: GATensor.hpp  GATensorImpl.hpp
TensorWrapper_Test/: CMakeLists.txt  TestSpace.cpp
TensorWrapper_test/: CMakeLists.txt  README.md
TensorWrapper_test/Examples/: LinAlg.cpp
TensorWrapper_test/StressTests/: BLASBaseLine.cpp  CCSD.cpp  CMakeLists.txt  StressTestEigen  StressTestEigen.cpp  StressTestEigenTensor.cpp  StressTestGlobalArrays.cpp  StressTestTiledArray.cpp
TensorWrapper_test/UnitTests/: CMakeLists.txt  README.md  TestCTF.cpp  TestContraction.cpp  TestConversions.cpp  TestEigen  TestEigen.cpp  TestEigenTensor.cpp  TestGATensor.cpp  TestGAWrapper.cpp  TestIndexItr.cpp  TestIndices.cpp  TestMemory.cpp  TestOperation.cpp  TestShape  TestShape.cpp  TestTensorPtr.cpp  TestTensorWrapper.cpp  TestTiledArray.cpp  TestTraits.cpp  TestTypeComparisons.cpp
cmake/: FindCBLASLAPACKE.cmake  FindCTF.cmake  FindGlobalArrays.cmake  TensorWrapperConfig.cmake.in  cmake_macros.cmake
dox/: Building.md  Doxyfile  FlatteningTensors.md  LinAlg.md  NewBackend.md  QuickStart.md  SupportedBackends.md  mainpage.md
